--- a/CSS/style-2.css
+++ b/CSS/style-2.css
@@ -17,9 +17,9 @@ body{
     font-style: normal;
     font-weight: 100;
     font-size: 22px;
-    background-image: url("../images/bg__1366.png");
+    background-image: url("../images/bg.jpg");
     background-repeat: no-repeat;    
-    background-position: center bottom;
+    background-position: center 73%;
     background-size: cover;
     background-attachment: fixed;     
     text-align: center;
@@ -66,7 +66,7 @@ body{
 }
 
 h1{
-    margin-top: 20px;
+    margin-top: 15px;
      
   }
 
@@ -74,7 +74,7 @@ h2{
       margin: 0 auto;
 
       width: 69.5%;
-      max-width: 950px; 
+      max-width: 870px; 
 /*      min-width: 490px;*/
     
   }
@@ -84,11 +84,12 @@ h2{
 
 
    h3{
-     width: 40.58%;
+/*     width: 40.58%;*/
+     width: 555px;
      margin-right:  auto;
      margin-left: auto;
-     margin-top: -15px;
-     max-width: 650px; 
+     
+     max-width: 600px; 
 /*     min-width: 420px;  */
   }
   h3 img{
@@ -96,8 +97,9 @@ h2{
   }
 
 /*--------------main area--------------------*/
+
 main .imagine-img{
-  margin: 50px 0 20px 0;
+  margin: 40px 0 20px 0;
 }
 
 
@@ -380,11 +382,24 @@ footer nav .midle-container i{
 
 .Psynopsis-page{
   text-align: left;
-  font-size: 12px;
+  font-size: 1.2rem;
+  width: 100%;
+  padding: 10px;
+  
+  overflow: hidden;
 }
 .top-Pnav{
-  width: 450px;;
+ font-size: 0.2rem;
+ margin-bottom: 10px;
   
+}
+.top-Pnav li{
+/*border: 1px solid #fff;*/
+
+}
+.Psynopsis-page .bread-cube{
+  font-size: 0.2rem;
+  margin-bottom: 15px;
 }
 .top-Pnav li{
   display: inline-block;
@@ -392,8 +407,10 @@ footer nav .midle-container i{
 }
 .Psynopsis-page h4{
   font-size: 1.6rem;
+  margin-bottom: 20px;
+  text-shadow: 0 0 5px #66ccff , 0 0 15px #009999;
 }
-.Psynopsis-page　p{
-  text-align: left;
-  font-size: 1.2rem;
+.Psynopsis-page p{
+  width: auto;
+
 }
