--- a/CSS/style-2.css
+++ b/CSS/style-2.css
@@ -384,30 +384,30 @@ footer nav .midle-container i{
   text-align: left;
   font-size: 1.2rem;
   width: 100%;
-  padding: 10px;
-  
+  padding: 20px; 
   overflow: hidden;
 }
 .top-Pnav{
- font-size: 0.2rem;
- margin-bottom: 10px;
-  
-}
-.top-Pnav li{
-/*border: 1px solid #fff;*/
+ font-size: 1.2rem;
+ 
 
 }
+
 .Psynopsis-page .bread-cube{
-  font-size: 0.2rem;
-  margin-bottom: 15px;
+  font-size: 0.8rem;
+  margin-bottom: 50px;
 }
 .top-Pnav li{
-  display: inline-block;
-  margin: 10px 5px 0 5px; 
+  
+  margin: 0 0 15px 0; 
+  padding: 0;
+}
+.top-Pnav li:last-child{
+   padding-bottom: 15px;
 }
 .Psynopsis-page h4{
   font-size: 1.6rem;
-  margin-bottom: 20px;
+  margin-bottom: 30px;
   text-shadow: 0 0 5px #66ccff , 0 0 15px #009999;
 }
 .Psynopsis-page p{
