--- a/CSS/style-2.css
+++ b/CSS/style-2.css
@@ -388,7 +388,7 @@ footer nav .midle-container i{
   overflow: hidden;
 }
 .top-Pnav{
- font-size: 1.2rem;
+
  
 
 }
@@ -398,9 +398,12 @@ footer nav .midle-container i{
   margin-bottom: 50px;
 }
 .top-Pnav li{
-  
+  font-size: 1.4rem;
   margin: 0 0 15px 0; 
   padding: 0;
+}
+.top-Pnav li:first-child{
+   padding-top: 15px;
 }
 .top-Pnav li:last-child{
    padding-bottom: 15px;
