--- a/CSS/style-2.css
+++ b/CSS/style-2.css
@@ -431,7 +431,7 @@ footer nav .midle-container i{
   text-align: left;
   font-size: 1.2rem;
   width: 100%;
-  padding: 20px; 
+  padding: 20px 20px 120px 20px;  
   overflow: scroll;
     background: rgba(0,0,0,0.4);
 }
@@ -449,7 +449,7 @@ footer nav .midle-container i{
   text-align: left;
   font-size: 1.2rem;
   width: 100%;
-  padding: 20px; 
+  padding: 20px 20px 120px 20px; 
   overflow: scroll;
   background: rgba(0,0,0,0.4);
   height: 100vh;
