--- a/CSS/style-2.css
+++ b/CSS/style-2.css
@@ -496,6 +496,7 @@ footer nav .midle-container i{
   background: rgba(0,0,0,0.5);
   color: #e5eced;
   margin-bottom: 20px;
+  font-size: 16px;
 }
 
 .Pcontact-page input[type="submit"]{
