--- a/CSS/presponse.css
+++ b/CSS/presponse.css
@@ -188,9 +188,10 @@
     z-index: -1;
   }
   main .imagine-img {
-    width: 245px;
+    width: auto;
     margin: 30px auto 40px auto;
     z-index: -1;
+
   }
   
   main .imagine-img li{
@@ -199,15 +200,19 @@
   }
 main .imagine-img li:nth-child(1){
   
-  width: 45px;
+  width: 40px;
 }
  main .imagine-img li:nth-child(2){
   
-  width: 120px;
+  width: 80px;
 } 
  main .imagine-img li:nth-child(3){
   margin-right: 0;
-  width: 80px;
+  width: 110px;
+} 
+   main .imagine-img li:nth-child(4){
+  margin-right: 0;
+  width: 70px;
 } 
   /* クオータ消すかも？
     .page main .quote-img{
