--- a/CSS/style.css
+++ b/CSS/style.css
@@ -105,11 +105,11 @@ main .imagine-img{
   margin: 40px auto 20px auto;
   display: flex;
  justify-content: center;
-  width: 480px;
+  width: auto;
 }
 main .imagine-img li{
   list-style-type: none;
-  width: 190px;
+
 }
 
 
